--- a/experience.html
+++ b/experience.html
@@ -192,7 +192,7 @@ svg.connectors {
 </head>
 <body>
 
-<h2>Professional Experience Timeline (2005–2025)</h2>
+<h2>Professional Experience Timeline (2005–2025) - updated</h2>
 
 <div class="legend">
   <div class="legend-item"><span class="legend-color" style="background:#32cd32"></span> Implementation</div>
