--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
     </div>
   </section>
 
-  <!-- Projects -->
-  <section id="projects" class="mx-auto max-w-7xl px-4 py-10">
+  <!-- Core Competencies -->
+  <section id="competencies" class="mx-auto max-w-7xl px-4 py-10">
     <h2 class="text-2xl md:text-3xl font-bold tracking-tight">Selected Projects</h2>
     <div class="mt-6 grid sm:grid-cols-2 lg:grid-cols-3 gap-5">
       <div class="rounded-2xl border border-slate-200/70 dark:border-slate-800/70 bg-white/70 dark:bg-slate-900/60 shadow-sm p-5">
